Correct style to aligne correctly the image in the button
git-svn-id: http://svn.a2billing.net/svn/asterisk2billing/trunk@1659 9d51a8f0-6521-42ea-932e-d822aa02ce2f

--- a/admin/Public/templates/default/css/main.css
+++ b/admin/Public/templates/default/css/main.css
@@ -1179,6 +1179,9 @@ SPAN.errorText {
 	padding: 0px 3px 0px 3px;
 	text-align: center;
 }
+.cssbutton_big img{
+	vertical-align:top;
+}
 .cssbutton_big:hover {	
 	background-image: url(../images/back_button_over.gif);
 }
